--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                             </p>
                         </div>
                     </div>
+                    <div id="benefits-images">
+                        <div id="circle-cover-bg"></div>
+                    </div>
                 </div>
         </section>
     </main>
